SKIN... Making it pretty

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -1,16 +1,15 @@
 section#main
   header
-    h1.logo Beardson.ly
-
-  section#thanks
-    h1 Success!
-    
-
-  section#the-form
-    #question Want to know when we sprout our first hairs?
-    .info 
+    h1
+      | Beards
+      span
+        | on.ly
+    h2
+      | (we're all inclusive)
+  #thanks
+  section#subscribe
+    / #question Want to know when we sprout our first hairs?
     form action="http://beardson.us4.list-manage.com/subscribe/post?u=c2abd562b2582f68ee26ee59c&amp;id=f840402739" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank"
-      label for="mce-EMAIL"
-        p Subscribe to our mailing list
+      label.info for="mce-EMAIL" Add your email to our list and we will let you know when we launch.
       input type="text" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" 
-      input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"
+      input type="submit" value="subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"
