--- a/source/layout.slim
+++ b/source/layout.slim
@@ -5,12 +5,33 @@ html
     meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"
 
     == stylesheet_link_tag "screen.css"
-  
+
   body 
 
     div id="main" role="main"
       == yield
-    div
 
-  == javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"
-  == javascript_include_tag "app.js"
+    == javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"
+    == javascript_include_tag "app.js"
+
+    - if Sinatra::Application.production?
+      javascript:
+        var clicky_site_ids = clicky_site_ids || [];
+        clicky_site_ids.push(66556526);
+        (function() {
+          var s = document.createElement('script');
+          s.type = 'text/javascript';
+          s.async = true;
+          s.src = '//static.getclicky.com/js';
+          ( document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0] ).appendChild( s );
+        })();
+      javascript:
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-30088915-1']);
+        _gaq.push(['_trackPageview']);
+
+        (function() {
+          var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+          ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+          var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
