--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -1,72 +1,156 @@
-/* Welcome to Compass.
- * In this file you should write your main styles. (or centralize your imports)
- * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
+/* compass stuffz */
+@import "compass";
+@import "compass/reset";
+@import "compass/css3";
 
-body {  
-  background-color: #e6e6e6;
-  font-family: Helvetica;
+/* local scss partials */
+@import "partials/variables";
+@import "partials/mixins";
+@import "partials/animate";
+@import "partials/font-face";
+
+body {
+  background: #000 url(/images/city.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  color: #efefef;
+  font-size: 20px;
+  font-family: sans-serif;
+  text-shadow: 0 1px 0 #000;
 }
 
-#main{
-  margin-left: auto;
-  margin-right: auto;
+a {
+  @include link-colors($link-color, $link-hover-color, $link-focus-color, $link-active-color, $link-visited-color);
+}
+
+#main {
+  background: url('/images/face.png');
+  background-position: center top;
+  display: block;
+  margin: 0 auto;
   text-align: center;
-  width: 960px;
-  
+  width: 600px;
+  height: 800px;
   header {
-    
+    margin: 0 auto;
+    padding-top: 236px;
+    width: 340px;
     h1 {
-      background-image: url(/images/logo.png);
-      background-repeat: no-repeat;
-      background-position: center top;
-      display: block;
-      line-height: 900px;
-      overflow: hidden;
-      width: 100%;
-      height: 177px;
+      font-family: 'CarnivaleeFreakshowRegular';
+      font-size: 70px;
+      span {
+        color: #5fafb9;
+      }
     }
-  }
-  #thanks {
-    opacity: 0;
-  }
-
-  #question {
-    color: #df9644;
-    padding: 20px;
-  }
-
-  .field_with_errors {
-    display: inline-block; 
+    h2 {
+      color: #d78d71;
+      font-family: "WisdomScriptAIRegular";
+      font-size: 22px;
+      padding-bottom: 8px;
+    }
+    p {
+      font-size: 16px;
+      margin: 0 auto;
+      padding-top: 22px;
+      width: 340px;
+    }
   }
   
-  input[type='text'] {
-    background-color: #e7e7e7;
-    border: 1px solid #737474;
-    border-radius: 4px;
-    box-shadow: inset 0 1px 2px #628286;
-    color: #aaa;
-    margin-left: 20px;
-    padding: 0;
+  
+  #thanks {
+    display: none;
+    @include border-radius(4px);
+    @include box-shadow(inset 0 1px 8px RGBA(0,0,0, .25), 0 0 0 1px RGBA(255,255,255, .10));
+    background: RGBA(0,0,0, .45);
+    font-family: "CarnivaleeFreakshowRegular";
+    margin: 0 auto;
+    padding: 10px 20px;
     text-align: center;
-    width: 520px;
-    height: 47px;
-    &.active {
-      box-shadow: inset 0 1px 2px #628286,
-                  0 0 0 4px #6abcc6;
-      color: #777;
+    width: 360px;
+    height: 158px;
+    opacity: 0;
+    h2 {
+      color: #F37F55;
+      font-size: 52px;
+      padding: 2px 0 8px 0;
+    }
+    p {
+      font-family: sans-serif;
+      font-size: 16px;
+      line-height: 22px;
     }
   }
-  input[type='submit']{
-    background-color: #6abcc6;
-    border: 1px solid #737474;
-    border-radius: 4px;
-    box-shadow: inset 0 1px 0 white;
-    color: white;
-    margin-left: 20px;
-    padding: 0;
-    width: 200px;
-    height: 50px;
-    text-shadow: black 0 1px 0;
+
+  #subscribe {
+    @include border-radius(4px);
+    @include box-shadow(inset 0 1px 8px RGBA(0,0,0, .25), 0 0 0 1px RGBA(255,255,255, .10));
+    background: RGBA(0,0,0, .45);
+    margin: 0 auto;
+    padding: 4px 0;
+    text-align: center;
+    width: 390px;
+    label.info {
+      display: block;
+      font-family: 'CarnivaleeFreakshowRegular';
+      font-size: 22px;
+      margin: 10px auto;
+      padding: 0;
+      width: 340px;
+    }
+    input[type=text] {
+      border: 1px solid #311B15;
+      border-radius: 4px;
+      @include box-shadow(0 1px 0 1px RGBA(0,0,0, .25), inset 0 0 0 1px #fff, inset 0 0 8px #4E3222);
+      display: block;
+      font-size: 14px;
+      margin: 0 auto;
+      padding: 16px;
+      text-align: center;
+      width: 240px;
+      height: 10px;
+    }
+    input[type=submit] {
+      @include border-radius(4px);
+      @include box-shadow(inset 0 1px 0 white, 0 2px 0 1px darken(#6abcc6, 55%));
+      background-color: #6abcc6;
+      border: 1px solid darken(#6abcc6, 55%);
+      color: white;
+      font-size: 18px;
+      font-weight: 900;
+      margin: 10px 0;
+      padding: 0;
+      width: 200px;
+      height: 40px;
+      text-shadow: black 0 1px 0;
+    }
+  }
+}
+
+.invalid {
+  @include flash-background-stripes;
+  @include border-radius(8px);
+  font-size: 16px;
+  color: #FFF;
+  padding: 10px 0 !important;
+  position: relative;
+  background-color: #911;
+  border-color: #8E1E1E;
+  width: 340px;
+  -webkit-animation: animate-stripes 1s linear infinite;
+  &:after {
+    clear: both;
+    content: '';
+    display: block;
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-width: 10px;
+    border-color: #911 transparent transparent transparent;
+    border-style: solid;
+    margin-left: -8px;
+    bottom: -20px;
+    left: 50%;
   }
 }
