--- a/source/layout.slim
+++ b/source/layout.slim
@@ -1,6 +1,7 @@
 doctype 5
 html
   head
+    title BeardsOn.ly
     meta charset="utf-8"
     meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"
 
