--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -32,7 +32,8 @@ a {
   margin: 0 auto;
   text-align: center;
   width: 600px;
-  height: 800px;
+  height: 750px;
+  -webkit-animation: slide-in .3s ease-out 1;
   header {
     margin: 0 auto;
     padding-top: 236px;
@@ -113,7 +114,7 @@ a {
     }
     input[type=submit] {
       @include border-radius(4px);
-      @include box-shadow(inset 0 1px 0 white, 0 2px 0 1px darken(#6abcc6, 55%));
+      @include box-shadow(inset 0 1px 0 white, 0 2px 0 1px RGBA(0,0,0, .25));
       background-color: #6abcc6;
       border: 1px solid darken(#6abcc6, 55%);
       color: white;
