--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -94,8 +94,9 @@ a {
     width: 390px;
     label.info {
       display: block;
-      font-family: 'CarnivaleeFreakshowRegular';
-      font-size: 22px;
+      font-family: sans-serif;
+      font-size: 18px;
+      line-height: 22px;
       margin: 10px auto;
       padding: 0;
       width: 340px;
